# ultimately

./: .gitmodules  build.gradle  config.gradle  gradle.properties  settings.gradle
apm/: README  build.gradle  maven_upload.gradle
app/: build.gradle
basic/jnidemo/: ReadMe  build.gradle
basic/native/: build.gradle
basic/native_crash/: REAME  build.gradle
basic/patcherjni/: build.gradle
common/: build.gradle
doc/: ANR  Git 基础  JNI  Thread  Vim 入门.md  android 签名  hotfix  multidex  进程包活
doc/dalvik.git-android-4.3_r3-vm/: Hash.cpp  Jni.cpp  LinearAlloc.h  Native.cpp
doc/ndk/: native crash 分析
gradle/wrapper/: gradle-wrapper.properties
gradlePluginDemo/: build.gradle
hotfix/: build.gradle
jnidemo/: CMakeLists.txt  build.gradle
jnidemo/src/main/cpp/src/: Android.mk  Application.mk  JNIHelpers.cpp  JNIHelpers.h  test_lib_load_way2.cpp  uninstall.cpp
jnidemo/src/main/cpp/src/jindemo/: JNIHelpers.h  native_init.cpp
jnidemo/src/main/cpp/src/jindemo/util/: log.h
jnidemo/src/main/cpp/src/util/: log.h
jnidemo/src/main/java/com/xcleans/base/tools/: ApkLibraryInstaller.java  MissingLibraryException.java  ReLinker.java  ReLinkerInstance.java  SystemLibraryLoader.java  TextUtils.java
jnidemo/src/main/java/com/xcleans/base/tools/elf/: Dynamic32Structure.java  Dynamic64Structure.java  Elf.java  Elf32Header.java  Elf64Header.java  ElfParser.java  Program32Header.java  Program64Header.java  Section32Header.java  Section64Header.java
jnidemo/src/main/java/com/xcleans/base/util/: AppUtils.java  FileUtils.java  IOUtils.java  NetworkUtils.java
jnidemo/src/main/java/com/xcleans/uninstall/: Uninstall.java
jnidemo/src/main/java/tv/yixia/testj/: MainActivity.java
jnidemo/src/main/res/values/: strings.xml
kotlinapp/: build.gradle
patcherjni/: build.gradle
patcherjni/jni/: Android.mk  Application.mk  JNIHelper.h  PatcherJni.cpp
processor/: bintray.gradle  build.gradle  sdk_utils.gradle
processor_lib/: bintray.gradle  build.gradle
testlib/: build.gradle  maven_upload.gradle
testui/: build.gradle
thirdLib/basic/: BaseDexClassLoader.java  ClassLoader.java  ClassPathURLStreamHandler.java  DexClassLoader.java  DexFile.java  (+2 more)
vasdollylib/: build.gradle
(+288 files in other folders)
