# For more information about using CMake with Android Studio, read the
# documentation: https://d.android.com/studio/projects/add-native-code.html

# Sets the minimum version of CMake required to build the native library.
#https://www.cnblogs.com/flyinggod/archive/2017/11/08/7805587.html
cmake_minimum_required(VERSION 3.4.1)

#Debug   Release  RelWithDebInfo  和  MinSizeRel
#设置编译版本
set(CMAKE_BUILD_TYPE Release)

#CMAKE_C_FLAGS
# CMAKE_CXX_FLAGS
# CMAKE_EXE_LINKER_FLAGS
#分别相当于：CFLAGS， CXXFLAGS， LDFLAGS。
#-fPIE -Werror -fvisibility=hidden -DRELEASE_MODE
set(CMAKE_C_FLAGS_RELEASE "$ENV{C_FLAGS}  -Werror -fvisibility=hidden")

# Creates and names a library, sets it as either STATIC
# or SHARED, and provides the relative paths to its source code.
# You can define multiple libraries, and CMake builds them for you.
# Gradle automatically packages shared libraries with your APK.


add_library( # Sets the name of the library.
        native-lib

        # Sets the library as a shared library.
        SHARED

        # Provides a relative path to your source file(s).
        #        src/main/cpp/src/test_lib_load_way1.cpp
        src/main/cpp/src/test_lib_load_way2.cpp
        src/main/cpp/src/JNIHelpers.cpp
        )

# Searches for a specified prebuilt library and stores the path as a
# variable. Because CMake includes system libraries in the search path by
# default, you only need to specify the name of the public NDK library
# you want to add. CMake verifies that the library exists before
# completing its build.

find_library( # Sets the name of the path variable.
        log-lib

        # Specifies the name of the NDK library that
        # you want CMake to locate.
        log)

# Specifies libraries CMake should link to your target library. You
# can link multiple libraries, such as libraries you define in this
# build script, prebuilt third-party libraries, or system libraries.

target_link_libraries( # Specifies the target library.
        native-lib

        # Links the target library to the log library
        # included in the NDK.
        ${log-lib})